# casino

./: Makefile  README.md  SPEC.md  TODO  TODO.md  ascii-playing-cards.txt  casino.py  libcasino.py  pyproject.toml  setup.py  zoidweb2-casino.sql
blackjack/: blackjack.py  casino.py
blackjack/blackjack/: __main__.py
blackjack/sql/: hand.sql  table.sql
casino/: __init__.py  __main__.py  boot.py
casino.egg-info/: PKG-INFO  SOURCES.txt
casino/slots/: README.md
casino/sql/: table.sql
casino/yahtzee/: README.md
scripts/: opencode.sql  poker.sql  setup_privileges.sql  setup_test_db.py
sql/: account.sql  betlog.sql  cardtable.sql  casino.sql  game.sql  log.sql  mapgameplayer.sql  player.sql
src/: Makefile  README.md  blank-card-008000.xcf  blank-card-777777.xcf  card-back.xcf  pyproject.toml  setup.py
src/casino/: .gitignore  Makefile  __init__.py  __main__.py  _version.py  bed.py  blackjack-monolithic.py  blackjack.py  client.py  config.py  connect.py  lib.py  main.py  menu.py  startup.py  testbj.py  tkbj.py  tktable.py
src/casino.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/casino/api/: __init__.py  handler.py  messages.py
src/casino/blackjack/: __init__.py  __main__.py  game.py  hand.py  lib.py  main.py  phase.py  play.py
src/casino/cards/: __init__.py  renamecards.py  testmarkers.txt
src/casino/commands/: __init__.py
src/casino/commands/admin/: __init__.py  lib.py
src/casino/commands/bank/: __init__.py  lib.py
src/casino/commands/chat/: __init__.py  lib.py
src/casino/commands/game/: __init__.py  lib.py
src/casino/commands/poker/: __init__.py  lib.py
src/casino/commands/table/: __init__.py  lib.py
src/casino/dal/: __init__.py  bet.py  game.py  player.py  slots.py  table.py
src/casino/dal/aiosql/: __init__.py  bet.py  game.py  player.py  table.py
src/casino/data/: bed.json
src/casino/games/: __init__.py  base.py
src/casino/maint/: __main__.py
src/casino/poker/: __init__.py  dealer.py  lib.py  player.py  variations.md
src/casino/poker/services/: __init__.py  poker.py
src/casino/poker/variant/: __init__.py  base.py  evaluator.py  omaha.py  seven_card_stud.py  texas_hold_em.py
src/casino/services/: __init__.py  bank.py  game.py  player.py  poker.py  slots.py  table.py
src/casino/slots/: __init__.py  __main__.py  dealer.py  game.py  lib.py  play.py  player.py
src/casino/sql/: account.sql  account_view.sql  bank_migration.sql  bank_player.sql  bank_table.sql  betlog.sql  betlog_view.sql  casino.sql  game.sql  game_view.sql  hand.sql  hand_view.sql  hidden_table_migration.sql  log.sql  log_view.sql  map_cardtable_player.sql  map_game_player.sql  mapgameplayer.sql  player.sql  player_view.sql  schema.sql  slot_spin_view.sql  slots.sql  table.sql  table_shoe_migration.sql  table_view.sql  test_data.sql
src/casino/tests/: __init__.py  test_action_completion.py  test_api.py  test_bed.py  test_blackjack_actions.py  test_blackjack_flow.py  test_card_hand.py  test_channel_integration.py  test_client.py  test_commands.py  test_hidden_tables.py  test_member_services.py  test_new_features.py  test_new_features_integration.py  test_permissions.py  test_player_observer.py  test_player_stats.py  test_player_stats_integration.py  test_poker.py  test_poker_integration.py  test_postoffice_background_task.py  test_postoffice_channel.py  test_postoffice_config.py  test_postoffice_imap_polling.py  test_postoffice_manual_check.py  test_postoffice_notification.py  test_postoffice_service.py  test_server.py  test_slots_flow.py  test_slots_integration.py  test_slots_unit.py  test_table_maint.py  test_yahtzee_dealer.py  test_yahtzee_handler.py  test_yahtzee_lib.py  test_yahtzee_service.py
src/casino/yahtzee/: README.md  __init__.py  __main__.py  api_handler.py  dealer.py  lib.py  play.py  service.py  testshowdice.py
yahtzee/: README.md  testshowdice.py
